@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////
 // checkstyle: Checks Java source code and other text files for adherence to a set of rules.
-// Copyright (C) 2001-2025 the original author or authors.
+// Copyright (C) 2001-2026 the original author or authors.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -581,7 +581,7 @@ public class CheckerTest extends AbstractModuleTestSupport {
         final List<AuditListener> listeners = TestUtil.getInternalStateListAuditListener(checker,
                 "listeners");
         assertWithMessage("Invalid child listener class")
-                .that(listeners.get(listeners.size() - 1) instanceof DebugAuditAdapter)
+                .that(listeners.getLast() instanceof DebugAuditAdapter)
                 .isTrue();
     }
 
