@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////
 // checkstyle: Checks Java source code and other text files for adherence to a set of rules.
-// Copyright (C) 2001-2025 the original author or authors.
+// Copyright (C) 2001-2026 the original author or authors.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -581,7 +581,7 @@ public class PropertyCacheFileTest extends AbstractPathTestSupport {
             assertWithMessage("Invalid config hash")
                     .that(configHashes[0])
                     .isEqualTo(configHashes[1]);
-            final boolean sameException = messages.get(0).equals(messages.get(1));
+            final boolean sameException = messages.getFirst().equals(messages.get(1));
             assertWithMessage("Invalid external resource hashes")
                     .that(externalResourceHashes[0].equals(externalResourceHashes[1]))
                     .isEqualTo(sameException);
