@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////
 // checkstyle: Checks Java source code and other text files for adherence to a set of rules.
-// Copyright (C) 2001-2025 the original author or authors.
+// Copyright (C) 2001-2026 the original author or authors.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -354,7 +354,8 @@ public class SuppressWithNearbyCommentFilterTest
     public void testEqualsAndHashCodeOfTagClass() {
         final SuppressWithNearbyCommentFilter filter = new SuppressWithNearbyCommentFilter();
         final Object tag =
-                getTagsAfterExecution(filter, "filename", "//SUPPRESS CHECKSTYLE ignore").get(0);
+                getTagsAfterExecution(filter, "filename", "//SUPPRESS CHECKSTYLE ignore")
+                        .getFirst();
         final EqualsVerifierReport ev = EqualsVerifier
                 .forClass(tag.getClass()).usingGetClass().report();
         assertWithMessage("Error: %s", ev.getMessage())
@@ -489,7 +490,8 @@ public class SuppressWithNearbyCommentFilterTest
     public void testToStringOfTagClass() {
         final SuppressWithNearbyCommentFilter filter = new SuppressWithNearbyCommentFilter();
         final Object tag =
-                getTagsAfterExecution(filter, "filename", "//SUPPRESS CHECKSTYLE ignore").get(0);
+                getTagsAfterExecution(filter, "filename", "//SUPPRESS CHECKSTYLE ignore")
+                        .getFirst();
         assertWithMessage("Invalid toString result")
             .that(tag.toString())
             .isEqualTo("Tag[text='SUPPRESS CHECKSTYLE ignore', firstLine=1, lastLine=1, "
@@ -501,11 +503,30 @@ public class SuppressWithNearbyCommentFilterTest
         final SuppressWithNearbyCommentFilter filter = new SuppressWithNearbyCommentFilter();
         filter.setIdFormat(".*");
         final Object tag =
-                getTagsAfterExecution(filter, "filename", "//SUPPRESS CHECKSTYLE ignore").get(0);
+                getTagsAfterExecution(filter, "filename", "//SUPPRESS CHECKSTYLE ignore")
+                        .getFirst();
         assertWithMessage("Invalid toString result")
             .that(tag.toString())
             .isEqualTo("Tag[text='SUPPRESS CHECKSTYLE ignore', firstLine=1, lastLine=1, "
                     + "tagCheckRegexp=.*, tagMessageRegexp=null, tagIdRegexp=.*]");
+    }
+
+    /**
+     * {@link #verifySuppressedWithParser(String, String...)} does not invoke
+     * {@code Tag#toString()}. Direct assertion is required to kill the mutation
+     */
+    @Test
+    public void testToStringOfTagClassWithMessage() {
+        final SuppressWithNearbyCommentFilter filter = new SuppressWithNearbyCommentFilter();
+        filter.setMessageFormat("msg");
+        filter.setCheckFormat("IGNORE");
+        final Object tag =
+                getTagsAfterExecution(filter, "filename", "//SUPPRESS CHECKSTYLE ignore")
+                        .getFirst();
+        assertWithMessage("Invalid toString result")
+            .that(tag.toString())
+            .isEqualTo("Tag[text='SUPPRESS CHECKSTYLE ignore', firstLine=1, lastLine=1, "
+                    + "tagCheckRegexp=IGNORE, tagMessageRegexp=msg, tagIdRegexp=null]");
     }
 
     @Test
